<resources>
    <string name="app_name">AppLazada</string>
    <string name="icon_bag_intro">icon Bag Intro</string>
    <string name="icon_money_intro">Icon Money intro</string>
    <string name="icon_security_intro">Icon Security Intro</string>
    <string name="text_intro_shopping">Thế giới mua sắm trong tầm tay bạn</string>
    <string name="text_intro_delivery">Giao hàng tận nơi thanh toán dễ dàng</string>
    <string name="text_intro_security">100% bảo vệ người tiêu dùng</string>
    <string name="logo_description">Logo Lazada</string>
    <string name="text_content_search">Tìm kiếm trên Lazada</string>
    <string name="image_button_description">Image Button</string>
    <string name="title_item_menu_trangchu_search">search</string>
    <string name="title_item_menu_trangchu_cart">cart</string>
    <string name="icon_cart_item_menu">icon cart item menu</string>
    <string name="text_cart">1</string>
    <string name="title_item_menu_three_dots">three dots</string>
    <string name="title_item_menu_login">Đăng nhập</string>
    <string name="title_item_menu_notification">Thông báo</string>
    <string name="title_item_menu_favorite">Danh sách mong muốn</string>
    <string name="title_item_menu_mycart">Đơn hàng của tui</string>
    <string name="title_item_menu_setting">Cài đặt</string>
    <string name="title_item_menu_policy">Chính sách</string>
    <string name="title_item_menu_help">Trợ giúp</string>
    <string name="title_item_menu_logout">Đăng xuất</string>
    <string name="title_empty" />
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="hint_email">Địa chỉ email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="title_forgot_password">Quên mật khẩu?</string>
    <string name="title_button_login">Đăng nhập</string>
    <string name="title_option_login">Hoặc đăng nhập bằng</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_google">Google</string>
    <string name="facebook_app_id">402211650336004</string>
    <string name="title_register_description">Cần điền tất cả các mục</string>
    <string name="hint_full_name">Họ tên đầy đủ</string>
    <string name="hint_email_address">Địa chỉ Email</string>
    <string name="title_note_pass">Mật khẩu phải bao gồm ít nhất 6 ký tự và 1 chữ hoa</string>
    <string name="hint_confirm_pass">Nhập lại mật khẩu</string>
    <string name="title_notification">Tôi muốn nhận các khuyến mại độc quyền qua Email</string>
    <string name="title_rules">Chúng tôi đã hiểu rõ các điều khoản bảo mật của Lazada</string>
    <string name="button_register">Đăng ký</string>
    <string name="title_option_register">Hoặc đăng ký bằng</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="input_ho_ten_empty_error">Vui lòng nhập họ và tên!</string>
    <string name="input_email_empty_error">Vui lòng nhập Email!</string>
    <string name="input_email_matcher_error">Email không hợp lệ!</string>
    <string name="input_password_empty_error">Vui lòng nhập mật khẩu!</string>
    <string name="input_password_mathcher_error">Mật khẩu gồm ít nhất 6 ký tự và 1 chữ hoa!</string>
    <string name="input_confirmpass_empty_error">Vui lòng nhập lại mật khẩu!</string>
    <string name="input_confirmpass_enter_not_maping_error">Mật khẩu nhập lại không trùng khớp!</string>
    <string name="login_failed">Email hoặc mật khẩu không đúng!</string>
</resources>
