<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_item_menu_trangchu_search"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_cart"
        android:actionLayout="@layout/custom_item_cart"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/title_item_menu_trangchu_cart"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/title_item_menu_three_dots"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/item_login"
                android:title="@string/title_item_menu_login"
                android:icon="@drawable/ic_item_menu_dangnhap"
                />
            <item
                android:id="@+id/item_notification"
                android:title="@string/title_item_menu_notification"
                android:icon="@drawable/ic_item_menu_thongbao"
                />
            <item
                android:id="@+id/item_favorite"
                android:title="@string/title_item_menu_favorite"
                android:icon="@drawable/ic_item_menu_favorite"
                />
            <item
                android:id="@+id/item_mycart"
                android:title="@string/title_item_menu_mycart"
                android:icon="@drawable/ic_item_menu_mycart"
                />
            <item
                android:id="@+id/item_setting"
                android:title="@string/title_item_menu_setting"
                android:icon="@drawable/ic_item_menu_setting"
                />
            <item
                android:id="@+id/item_policy"
                android:title="@string/title_item_menu_policy"
                android:icon="@drawable/ic_item_menu_policy"
                />
            <item
                android:id="@+id/item_help"
                android:title="@string/title_item_menu_help"
                android:icon="@drawable/ic_item_menu_help"
                />
            <item
                android:id="@+id/item_logout"
                android:title="@string/title_item_menu_logout"
                android:icon="@drawable/ic_logout"
                android:visible="false"
                />
        </menu>
    </item>
</menu>