<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundplashscreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_black"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_100"
            android:contentDescription="@string/icon_bag_intro"
            android:src="@drawable/iconbag" />

        <TextView
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/text_intro_shopping"
            android:textColor="@color/white_color"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/icon_money_intro"
            android:src="@drawable/iconmoney" />

        <TextView
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/text_intro_delivery"
            android:textColor="@color/white_color"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/icon_security_intro"
            android:src="@drawable/iconsercurity" />

        <TextView
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/text_intro_security"
            android:textColor="@color/white_color"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/dp_20"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/lazadacustomerlogo" />
</FrameLayout>