<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10">

        <it.dut.thaixoan.applazada.customview.PasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:useHint="true"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:gravity="end"
        android:text="@string/title_forgot_password"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/yellow_900"
        android:text="@string/title_button_login"
        android:textColor="@color/white_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/title_option_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/custom_button_fb_dangnhap"
            android:drawableLeft="@drawable/facebook"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/title_facebook"
            android:textColor="@color/facebook"
            android:drawableStart="@drawable/facebook"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/custom_button_gg_dangnhap"
            android:drawableLeft="@drawable/google"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/title_google"
            android:textColor="@color/google"
            android:drawableStart="@drawable/google"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>
</LinearLayout>